tests/ui/fail-try-parse-nightly/invalid_not_in_operator.stderr
error: Expected `IN` after `NOT`, found `NULL`
 --> tests/ui/fail-try-parse-nightly/invalid_not_in_operator.rs:6:17
  |
6 |         age NOT NULL AND i32  // Invalid operator
  |                 ^^^^
  |
  = help: Supported operators are: =, !=, >, <, >=, <=, LIKE, ILIKE, IN, NOT IN

error: Unknown operator `I32`, expected one of `AND`, `OR`, or `NOT`
 --> tests/ui/fail-try-parse-nightly/invalid_not_in_operator.rs:3:1
  |
3 | / sql_filter! {
4 | |     pub struct UserFilter {
5 | |         SELECT * FROM users WHERE
6 | |         age NOT NULL AND i32  // Invalid operator
7 | |     }
8 | | }
  | |_^
  |
  = note: this error originates in the macro `sql_filter` (in Nightly builds, run with -Z macro-backtrace for more info)
